--- a/gui/src/main/templates/App.gwt.xml
+++ b/gui/src/main/templates/App.gwt.xml
@@ -81,6 +81,15 @@
     <extend-property name="locale" values="en"/>
     <extend-property name="locale" values="de"/>
 
+
+    <extend-property name="locale" values="zh_Hans"/>
+    <extend-property name="locale" values="pt_BR"/>
+    <extend-property name="locale" values="fr"/>
+    <extend-property name="locale" values="es"/>
+    <extend-property name="locale" values="ja"/>
+
+    <set-property-fallback name="locale" value="en"/>
+
     <stylesheet src="console.css" />
     <stylesheet src="lab.css" />
 
