--- a/gui/src/main/java/org/jboss/as/console/public/console.css
+++ b/gui/src/main/java/org/jboss/as/console/public/console.css
@@ -397,6 +397,7 @@ body {
     text-align:right;
     padding-right:10px;
     cursor:pointer;
+    vertical-align:right;
 }
 
 .footer-link:hover {
