offscreen css for semantic elements

--- a/gui/src/main/java/org/jboss/as/console/public/lab.css
+++ b/gui/src/main/java/org/jboss/as/console/public/lab.css
@@ -13,9 +13,9 @@ button:focus {
 }
 
 
-.semantic {
+.offscreen {
     position: absolute;
-    left: -9999px;
+    left: -999em;
     top: 0;
     height: 1px;
     width: 1px;
