use text link cells (a11y) within property editor

--- a/gui/src/main/java/org/jboss/as/console/public/console.css
+++ b/gui/src/main/java/org/jboss/as/console/public/console.css
@@ -202,6 +202,10 @@ body {
     background-position-right:0px 50%;
 }
 
+.textlink-cell {
+    font-size: 11px;
+}
+
 .content-description {
 
     margin-top: 0px;
