update metric help panels and move them above the actual values

--- a/gui/src/main/java/org/jboss/as/console/public/lab.css
+++ b/gui/src/main/java/org/jboss/as/console/public/lab.css
@@ -60,3 +60,7 @@ a:hover, a:active { outline: none; }
     float:right;
     line-height:10px;
 }
+
+.help-attribute-descriptions {
+    padding-top:5px;
+}
