turn remaining cell buttons into text links (a11y)

--- a/gui/src/main/java/org/jboss/as/console/public/console.css
+++ b/gui/src/main/java/org/jboss/as/console/public/console.css
@@ -206,6 +206,10 @@ body {
     font-size: 11px;
 }
 
+.textlink-cell:hover {
+    text-decoration: underline;
+}
+
 .content-description {
 
     margin-top: 0px;
