--- a/gui/src/main/java/org/jboss/as/console/public/lab.css
+++ b/gui/src/main/java/org/jboss/as/console/public/lab.css
@@ -68,3 +68,27 @@ a:hover, a:active { outline: none; }
 .tree-section:focus {
     outline: 0px;
 }
+
+.gwt-TabPanelBottom {
+    padding-top:10px;
+}
+
+.default-toolstrip {
+    width:100%;
+    height:20px;
+    padding: 4px 10px 4px 10px!important;
+    background:none!important;
+}
+
+.content-group-label {
+    font-weight:BOLD;
+    color: #A4A4A4;
+    font-size:14px!important;
+    height:18px;
+    width:100%;
+    padding-left:0px!important;
+    padding-bottom:0px;
+    margin-bottom:10px;
+    padding-top:10px;
+}
+
