--- a/spi/src/main/resources/org/jboss/as/console/spi/PluginBinding.tmpl
+++ b/spi/src/main/resources/org/jboss/as/console/spi/PluginBinding.tmpl
@@ -7,5 +7,8 @@ public class ${className} extends AbstractPresenterModule {
         <#list extensions as ext>
             install(new ${ext.getType()}());
         </#list>
+
+
+        // NOTE: this class was generated. don't modify it manually.
     }
 }
