--- a/gui/src/main/java/org/jboss/as/console/public/lab.css
+++ b/gui/src/main/java/org/jboss/as/console/public/lab.css
@@ -1,23 +1,3 @@
-.gwt-SuggestBoxPopup {
-    border: 1px solid #A7ABB4;
-    background-color:#ffffff;
-    padding:4px;
-
-    -moz-box-shadow: 2px 2px 3px #000000;
-    -webkit-box-shadow: 2px 2px 3px #000000;
-    box-shadow: 2px 2px 3px #000000;
-
-    z-index:20;
-}
-
-.gwt-SuggestBoxPopup .item-selected {
-    background-color:#e5e5e5!important;
-    -webkit-transition: background-color .1s ease-in-out;
-    -moz-transition: background-color .1s ease-in-out;
-    transition: background-color .1s ease-in-out;
-    cursor: pointer;
-
-}
 
 /* *[tabindex] {
     border: 1px dashed green;
@@ -110,3 +90,31 @@ a:hover, a:active { outline: none; }
     padding-top:10px;
 }
 
+
+.gwt-SuggestBox
+{
+    text-align                  :    left;
+}
+.gwt-SuggestBoxPopup
+{
+    text-align                   :    left;
+    border: 1px solid #A7ABB4;
+    background-color:#ffffff;
+    padding:4px;
+
+    -moz-box-shadow: 2px 2px 3px #000000;
+    -webkit-box-shadow: 2px 2px 3px #000000;
+    box-shadow: 2px 2px 3px #000000;
+
+    z-index:20;
+
+}
+.gwt-SuggestBoxPopup .item
+{
+}
+
+.gwt-SuggestBoxPopup .item-selected
+{
+    border: 1px dotted #3F3F3F!important;
+    background-color:#ffffff;
+}
