finalize (rename) extension API elements

--- a/gui/src/main/templates/App.gwt.xml
+++ b/gui/src/main/templates/App.gwt.xml
@@ -40,7 +40,7 @@
 
     <define-configuration-property name="gin.ginjector" is-multi-valued="false" />
     <set-configuration-property name="gin.ginjector"
-                                value="org.jboss.as.console.client.core.gin.PluginSpecification" />
+                                value="org.jboss.as.console.client.core.gin.Composite" />
 
     <set-property name="log_ConsoleLogger" value="ENABLED" />
     <set-property name="log_GWTLogger" value="ENABLED" />
