--- a/spi/src/main/resources/org/jboss/as/console/spi/BeanFactory.tmpl
+++ b/spi/src/main/resources/org/jboss/as/console/spi/BeanFactory.tmpl
@@ -8,11 +8,11 @@ import ${ext};
 </#list>
 
 
-public interface BeanFactory extends AutoBeanFactory,
+public interface BeanFactory extends
     <#list extensions as ext>
         ${ext},
     </#list>
-    CoreBeanFactory {
+    AutoBeanFactory {
 
     // NOTE: this class was generated. don't modify it manually.
 }
