--- a/spi/src/main/resources/org/jboss/as/console/spi/Extension.tmpl
+++ b/spi/src/main/resources/org/jboss/as/console/spi/Extension.tmpl
@@ -8,11 +8,11 @@ import ${ext};
 </#list>
 
 @GinModules(CompositeBinding.class)
-public interface Composite extends Ginjector,
+public interface Composite extends
     <#list extensions as ext>
         ${ext},
     </#list>
-    CoreUI {
+    Ginjector {
 
     // NOTE: this class was generated. don't modify it manually.
 }
