--- a/gui/src/main/templates/App.dev.gwt.xml
+++ b/gui/src/main/templates/App.dev.gwt.xml
@@ -37,7 +37,7 @@
 
     <inherits name='com.google.gwt.visualization.Visualization'/>
 
-    <inherits name="com.google.gwt.precompress.Precompress"/>
+    <!--inherits name="com.google.gwt.precompress.Precompress"/-->
 
     <!-- Enable debug ID. -->
 	<inherits name="com.google.gwt.user.Debug"/>
